unpackaged/main/default/objects/CMPL123CME__Questionnaire__c/CMPL123CME__Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Assessment</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Questionnaire No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>