unpackaged/main/default/objects/CMPL123CME__Questionnaire__c/fields/Audit__c.field-meta.xml
<CustomField>
        <fullName>Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audit</label>
        <referenceTo>CMPL123QMS__Internal_Audit__c</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </CustomField>