unpackaged/main/default/objects/CMPL123CME__Questionnaire__c/fields/CMPL123CME__Key_value__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Key_value__c</fullName>
        <label>Key Value</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>