unpackaged/main/default/objects/CMPL123CME__Questionnaire__c/fields/CMPL123CME__Last_Answer_Updated__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Last_Answer_Updated__c</fullName>
        <label>Last Answer Updated</label>
        <summarizedField>CMPL123CME__Questionnaire_Items__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>CMPL123CME__Questionnaire_Items__c.CMPL123CME__Questionnaire__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </CustomField>