unpackaged/main/default/objects/CMPL123CME__Questionnaire__c/fields/CMPL123CME__Percent_Score__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Percent_Score__c</fullName>
        <formula>CMPL123CME__Total_Score__c  /  CMPL123CME__Total_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>