unpackaged/main/default/objects/CMPL123CME__Questionnaire__c/fields/CMPL123CME__Related_Product__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Related_Product__c</fullName>
        <formula>CMPL123CME__Complaint__r.CMPL123CME__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Product</label>
        <type>Text</type>
    </CustomField>