unpackaged/main/default/objects/CMPL123CME__Questionnaire__c/fields/CMPL123CME__Reportable__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Reportable__c</fullName>
        <formula>If( CMPL123CME__Percent_Score__c &lt; 0.5, 'Not Reportable', 'Reportable')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reportable</label>
        <type>Text</type>
    </CustomField>