unpackaged/main/default/objects/CMPL123CME__Questionnaire__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
        <fullName>Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Questionnaire</label>
        <referenceTo>CMPL123CME__Questions_Template__c</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </CustomField>