unpackaged/main/default/objects/CMPL123CME__Questionnaire__c/recordTypes/Audit.recordType-meta.xml
<RecordType>
        <fullName>Audit</fullName>
        <active>false</active>
        <label>Audit</label>
    </RecordType>