unpackaged/main/default/objects/CMPL123CME__Questionnaire__c/recordTypes/CMPL123CME__Initial.recordType-meta.xml
<RecordType>
        <fullName>CMPL123CME__Initial</fullName>
        <active>false</active>
        <label>Initial</label>
    </RecordType>