unpackaged/main/default/objects/CMPL123CME__Questionnaire__c/recordTypes/CMPL123CME__Investigation.recordType-meta.xml
<RecordType>
        <fullName>CMPL123CME__Investigation</fullName>
        <active>false</active>
        <label>Investigation</label>
    </RecordType>