unpackaged/main/default/objects/CMPL123CME__Questionnaire__c/validationRules/Prevent_Assessment_from_edit.validationRule-meta.xml
<ValidationRule>
        <fullName>Prevent_Assessment_from_edit</fullName>
        <active>true</active>
        <description>Prevent Editing or adding assessment when the complaint is closed</description>
        <errorConditionFormula>CMPL123CME__Complaint__r.CMPL123CME__CMPL123_WF_Status__c =="Closed - Completed"</errorConditionFormula>
        <errorMessage>Lock Record</errorMessage>
    </ValidationRule>