unpackaged/main/default/objects/CMPL123CME__Questionnaire__c/validationRules/Prevent_Assessment_from_edit_for_audit.validationRule-meta.xml
<ValidationRule>
        <fullName>Prevent_Assessment_from_edit_for_audit</fullName>
        <active>true</active>
        <errorConditionFormula>Audit__r.CMPL123_WF_Status__c =="Closed - Done"</errorConditionFormula>
        <errorMessage>Record Locked</errorMessage>
    </ValidationRule>